tests/should_fail/syntax_pipe_void_into_next.nv
module syntax_pipe_void_result

import super.std.core

// Piping into a function that returns Void, then using result
fn consume(x: Int) {}

let result = 42 |> consume |> Cast::string
